--- a/documents/OMV_file1.Rmd
+++ b/documents/OMV_file1.Rmd
@@ -9,6 +9,7 @@ Load Packages
 ```{r warning=FALSE, message=FALSE}
 library(tidyverse)
 library(lubridate)
+library(stringr)
 # Set chunk options
 knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 ```
@@ -16,10 +17,15 @@ knitr::opts_chunk$set(warning=FALSE, message=FALSE)
 Import and Bind Voter Data 
 
 ```{r message=FALSE, warning=FALSE}
+#vote_particip <- read_csv("http://bit.ly/2kG37yJ")
+vote_motor <- read_csv("http://bit.ly/2lCadlB")
+```
+
+
+```{r eval = F, message=FALSE, warning=FALSE}
 
 #vote_particip <- read_csv("http://bit.ly/2kG37yJ")
 vote_motor <- read_csv("http://bit.ly/2lCadlB")
-
 
 #These are the files with correct voting turnout data, however they are still missing registration type, which I join from the data used in Home Work 1. 
 #file.choose()
@@ -41,7 +47,7 @@ voter_all2 <- left_join(x = voter_all,y = vote_motor, by = "VOTER_ID")
 
 Tidy Vote File 
 
-```{r}
+```{r eval = F}
 
 voter_or <- voter_all2 %>%
   select(VOTER_ID, FIRST_NAME, LAST_NAME, COUNTY.x, CITY, BIRTH_DATE, STATUS, PARTY_CODE, PRECINCT_NAME, PRECINCT, ZIP_CODE, `11/08/2016`, DESCRIPTION, `11/06/2012`, `11/04/2008`)
@@ -62,7 +68,7 @@ Import Geographic Data
 #county <- read_csv("/Users/rosa/Desktop/SEcounty.csv")
 
 #file.choose()
-zipcode <- read_csv("/Users/rosa/Desktop/zipcode.csv")
+zipcode <- read_csv("../data-raw/zipcode.csv")
 ```
 
 Tidy Geographic Data 
@@ -109,17 +115,18 @@ race <- zipcode %>%
 
 Get at zip code level for Oregon registered voters
 
-```{r}
+```{r eval = F}
 total_regs <- voter_or %>%
   group_by(ZIP_CODE) %>%
   summarize(count = n())
+save(total_regs, file = "../data/total_regs.rda")
 ```
 
 Construct Variables for Analysis: 
 
 Proportion of registered that voted on Nov 2016 and Nov 2012 
 
-```{r}
+```{r eval = F}
 prop_voted2016 <- voter_or %>%
   group_by(ZIP_CODE) %>%
   summarize(prop_v16 = mean(`11/08/2016` == "YES"))
@@ -131,7 +138,7 @@ prop_voted2012 <- voter_or %>%
 
 Proportion that are not Motor Voter Registered 
 
-```{r}
+```{r eval = F}
 a <- (is.na(voter_or$DESCRIPTION))
 voter_or$DESCRIPTION[a] <- "conventional"
 voter_or$DESCRIPTION <- as.factor(voter_or$DESCRIPTION)
@@ -149,7 +156,7 @@ prop_regOMV <- voter_or %>%
 
 Construct data sets for analysis with Voter info by Zip Code including, number of registered voters, how they registered, and the proportion that voted.
 
-```{r}
+```{r eval = F}
 zipcode_data <- inner_join(x = total_regs,
                            y = prop_voted2016,
                            by = "ZIP_CODE")
@@ -175,18 +182,16 @@ zip_reg <- inner_join(x = race_reg, y = sex,
                       by = "ZIP_CODE")
 
 # Add Turnout difference 
-require(dplyr)
-require(tidyr)
 
 zip_reg <- zip_reg %>%
 mutate (vote_diff = prop_v16 / prop_v12)
-
+save(zip_reg, file = "../data/zip_reg.rda")
 ```
 
 Filter Outliers and Zips under 50 people 
 
 ```{r}
-
+load("../data/zip_reg.rda")
 zip_reg <- filter(zip_reg, total_pop.x > 50)
 zip_reg <- filter(zip_reg, p_white > .25)
 ```
@@ -213,14 +218,14 @@ ggplot(zip_reg, aes(x = log(p_black +.005), y = prop_OMV)) +
 geom_point(color= "mediumpurple2")+
   geom_smooth(method=`lm`, color= "hotpink") +
     ggtitle("Registration Type by Zip Code Blackness") +
-  labs(x="Log Percet Black of Zip Code",y="Proportion of Voters Registered by OMV")
+  labs(x="Log Percent Black of Zip Code",y="Proportion of Voters Registered by OMV")
 
 #log both 
 ggplot(zip_reg, aes(x = log(p_black), y = log(prop_OMV))) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "mediumpurple2") +
     ggtitle("Registration Type by Zip Code Blackness") +
-  labs(x="Log Percet Black of Zip Code",y="Log Proportion of Voters Registered Traditionally")
+  labs(x="Log Percent Black of Zip Code",y="Log Proportion of Voters Registered Traditionally")
 
 #Alternative transformation
 
@@ -228,7 +233,7 @@ ggplot(zip_reg, aes(x = p_black +I(p_black^2), y = prop_OMV)) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "mediumpurple2") +
     ggtitle("Registration Type by Zip Code Blackness") +
-  labs(x="Log Percet Black of Zip Code",y="Proportion of Voters Registered Traditionally")
+  labs(x="Log Percent Black of Zip Code",y="Proportion of Voters Registered Traditionally")
 
 # Linear Model 
 
@@ -242,7 +247,7 @@ summary(m1b)
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "mediumpurple2") +
     ggtitle("Registration Type by Zip Code Whiteness") +
-  labs(x="Percet White of Zip Code",y="Proportion of Voters Registered Traditionally")
+  labs(x="Percent White of Zip Code",y="Proportion of Voters Registered Traditionally")
 
 #transformation
 ggplot(zip_reg, aes(x = log(p_white), y = prop_OMV)) +
@@ -256,13 +261,13 @@ ggplot(zip_reg, aes(x = p_white + I(p_white^2), y = prop_OMV +I(prop_OMV^2))) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "mediumpurple2") +
     ggtitle("Registration Type by Zip Code Whiteness") +
-  labs(x="Percet White of Zip Code",y="Proportion of Voters Registered Traditionally")
+  labs(x="Percent White of Zip Code",y="Proportion of Voters Registered Traditionally")
 
 ggplot(zip_reg, aes(x = p_white, y = log(prop_OMV))) +
 geom_point(color= "hotpink")+
   geom_smooth(method=`lm`, color= "mediumpurple2") +
     ggtitle("Registration Type by Zip Code Whiteness") +
-  labs(x="Percet White of Zip Code",y="Log Proportion of Voters Registered Traditionally")
+  labs(x="Percent White of Zip Code",y="Log Proportion of Voters Registered Traditionally")
 
 m2 <- lm(log(p_white) ~ prop_OMV, data = zip_reg)
 summary(m2)
